--- a/css/common.css
+++ b/css/common.css
@@ -238,6 +238,7 @@ ul.bread{
   padding-left: 0;
   padding: 40px 0;
   font-size: 1.85rem;
+  margin-bottom: 0;
 }
 ul.bread li{
   color: #64a7c7;
@@ -261,6 +262,11 @@ ul.bread li a:hover{
 }
 ul.bread li a i{
   margin-right: 20px;
+}
+
+.editor{
+  font-size: 1.5rem;
+  line-height: 1.5;
 }
 
 footer {
