--- a/css/page.css
+++ b/css/page.css
@@ -90,6 +90,7 @@
   line-height: 2;
 }
 
+/*購物流程*/
 .float_page {
   padding-top: 150px;
   background-color: #eaeaea;
@@ -170,4 +171,103 @@
   font-size: 1.65rem;
   color: #585858;
   margin-bottom: 45px;
+}
+
+/*聯絡我們*/
+.contact_page {
+  border-top: 170px solid #0185cd;
+}
+.contact_page .top {
+  background-image: url(../images/contact/avel-chuklanov-DUmFLtMeAbQ-unsplash.jpg);
+  background-size: cover;
+  padding-top: 160px;
+}
+.contact_page .top .title {
+  font-size: 3rem;
+  font-weight: 700;
+  letter-spacing: 10px;
+  text-align: center;
+  color: #676767;
+  margin-bottom: 160px;
+}
+.contact_page .top .form {
+  max-width: 685px;
+  width: 100%;
+  margin-left: auto;
+  margin-bottom: 100px;
+}
+.contact_page .top .form .name {
+  font-size: 3rem;
+  color: #0185cd;
+  font-weight: bold;
+  margin-bottom: 60px;
+}
+.contact_page .top .form .inputs {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 -15px;
+}
+.contact_page .top .form .inputs .input {
+  flex: 0 0 100%;
+  padding: 0 15px;
+  margin-bottom: 20px;
+}
+.contact_page .top .form .inputs .input.half {
+  flex: 0 0 50%;
+}
+.contact_page .top .form .inputs .input label {
+  width: 100%;
+  font-size: 2rem;
+  color: #0185cd;
+  padding-left: 10px;
+}
+.contact_page .top .form .inputs .input input,
+.contact_page .top .form .inputs .input textarea {
+  width: 100%;
+  background-color: #fff;
+  border: none;
+  font-size: 2rem;
+  border-radius: 15px;
+  box-shadow: 5px 5px 5px #ccc;
+  outline: none;
+  padding: 10px 20px;
+}
+.contact_page .top .form .inputs .input textarea {
+  padding: 20px;
+  min-height: 400px;
+}
+.contact_page .top .form .send{
+  width: 250px;
+  height: 60px;
+  background-color: #0185cd;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
+  border-radius: 50px;
+  margin-top: 30px;
+  cursor: pointer;
+}
+.contact_page .top .form .send:hover{
+  opacity: .8;
+}
+.contact_page .top .bg_text{
+  padding-bottom: 130px;
+  text-align: right;
+  color: #fff;
+  font-size: 5rem;
+  font-weight: 700;
+  letter-spacing: 10px;
+}
+.contact_page .bottom{
+  padding-bottom: 29%;
+  position: relative;
+}
+.contact_page .bottom iframe{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
